--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,14 @@ matrix:
       mono: latest
       dotnet: 2.1.500
 
+before_install:
+- |
+  if [[ $TRAVIS_OS_NAME == "osx" ]]; then
+    brew install git-lfs
+  fi
+
+before_script:
+- git lfs pull
+
 script:
-  - ./build.sh --target=Travis --verbosity=diagnostic
+- ./build.sh --target=Travis --verbosity=diagnostic
