--- a/src/Lemon.IntegrationTests/Lemon.IntegrationTests.csproj
+++ b/src/Lemon.IntegrationTests/Lemon.IntegrationTests.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.JSON" Version="12.0.2" />
+    <PackageReference Include="YamlDotNet" Version="6.0.0" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
