:sparkles: Add test for IVFC format

--- a/test_resources/containers/aofm_ivfc.yml
+++ b/test_resources/containers/aofm_ivfc.yml
@@ -8,5 +8,63 @@ children:
     children:
   - name: lv5
     format_type: Yarhl.FileSystem.NodeContainerFormat
-    check_children: false
+    check_children: true
     children:
+      - name: fix.xr
+        format_type: Yarhl.IO.BinaryFormat
+        stream_offset: 169007792
+        stream_length: 24592
+        check_children: true
+        children:
+      - name: chr
+        format_type: Yarhl.FileSystem.NodeContainerFormat
+        check_children: true
+        children:
+          - name: c100.xc
+            format_type: Yarhl.IO.BinaryFormat
+            stream_offset: 169032384
+            stream_length: 281444
+            check_children: true
+            children:
+          - name: c101.xc
+            format_type: Yarhl.IO.BinaryFormat
+            stream_offset: 169313840
+            stream_length: 283876
+            check_children: true
+            children:
+          - name: c102.xc
+            format_type: Yarhl.IO.BinaryFormat
+            stream_offset: 169597728
+            stream_length: 314324
+            check_children: true
+            children:
+          - name: c103.xc
+            format_type: Yarhl.IO.BinaryFormat
+            stream_offset: 169912064
+            stream_length: 350356
+            check_children: true
+            children:
+      - name: fnt
+        format_type: Yarhl.FileSystem.NodeContainerFormat
+        check_children: false
+        children:
+      - name: menu
+        format_type: Yarhl.FileSystem.NodeContainerFormat
+        check_children: false
+        children:
+      - name: mov
+        format_type: Yarhl.FileSystem.NodeContainerFormat
+        check_children: false
+        children:
+      - name: seq
+        format_type: Yarhl.FileSystem.NodeContainerFormat
+        check_children: false
+        children:
+      - name: sky
+        format_type: Yarhl.FileSystem.NodeContainerFormat
+        check_children: false
+        children:
+      - name: snd
+        format_type: Yarhl.FileSystem.NodeContainerFormat
+        check_children: false
+        children:
