--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,10 @@ before_install:
 - |
   if [[ $TRAVIS_OS_NAME == "osx" ]]; then
     brew install git-lfs
+  else
+    sudo apt-get clean
+    sudo apt-get update
+    sudo apt-get install dpkg
   fi
 
 before_script:
