--- a/test_resources/containers/fake_exefs.yml
+++ b/test_resources/containers/fake_exefs.yml
@@ -1,24 +1,28 @@
-name: system
-format_type: Yarhl.FileSystem.NodeContainerFormat
+name: NodeContainerRoot
+format_type: null
+tags:
 check_children: true
 children:
   - name: .code
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 17408
     stream_length: 32
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: banner
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 17920
     stream_length: 64
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: randomm
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 18432
     stream_length: 80
+    tags:
     check_children: true
-    children: []
+    children:
