--- a/test_resources/containers/aofm_cia.yml
+++ b/test_resources/containers/aofm_cia.yml
@@ -1,46 +1,46 @@
-name: root
-format_type: Yarhl.FileSystem.NodeContainerFormat
+name: NodeContainerRoot
+format_type: null
 tags:
-  - version: 0
-  - type: 0
+  version: 0
+  type: 0
 check_children: true
 children:
   - name: certs_chain
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 0x2040
     stream_length: 0x0A00
-    tags: []
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: ticket
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 0x2A40
     stream_length: 0x0350
-    tags: []
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: title
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 0x2DC0
     stream_length: 0x0B64
-    tags: []
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: content
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 0x3940
     stream_length: 0x0B1E1000
-    tags: []
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: metadata
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 0x0B1E4940
     stream_length: 0x3AC0
-    tags: []
+    tags:
     check_children: true
-    children: []
+    children:
