--- a/test_resources/containers/aofm_exefs.yml
+++ b/test_resources/containers/aofm_exefs.yml
@@ -1,31 +1,36 @@
-name: system
-format_type: Yarhl.FileSystem.NodeContainerFormat
+name: NodeContainerRoot
+format_type: null
+tags:
 check_children: true
 children:
   - name: .code
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 19968
     stream_length: 980732
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: banner
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 1000960
     stream_length: 165064
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: icon
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 1166336
     stream_length: 14016
+    tags:
     check_children: true
-    children: []
+    children:
 
   - name: logo
     format_type: Yarhl.IO.BinaryFormat
     stream_offset: 1180672
     stream_length: 8192
+    tags:
     check_children: true
-    children: []
+    children:
