--- a/test_resources/containers/aofm_ivfc.yml
+++ b/test_resources/containers/aofm_ivfc.yml
@@ -1,70 +1,85 @@
-name: rom
-format_type: Yarhl.FileSystem.NodeContainerFormat
+name: NodeContainerRoot
+format_type: null
+tags:
 check_children: true
 children:
   - name: gkk
     format_type: Yarhl.FileSystem.NodeContainerFormat
+    tags:
     check_children: false
     children:
   - name: lv5
     format_type: Yarhl.FileSystem.NodeContainerFormat
+    tags:
     check_children: true
     children:
       - name: fix.xr
         format_type: Yarhl.IO.BinaryFormat
         stream_offset: 169007792
         stream_length: 24592
+        tags:
         check_children: true
         children:
       - name: chr
         format_type: Yarhl.FileSystem.NodeContainerFormat
+        tags:
         check_children: true
         children:
           - name: c100.xc
             format_type: Yarhl.IO.BinaryFormat
             stream_offset: 169032384
             stream_length: 281444
+            tags:
             check_children: true
             children:
           - name: c101.xc
             format_type: Yarhl.IO.BinaryFormat
             stream_offset: 169313840
             stream_length: 283876
+            tags:
             check_children: true
             children:
           - name: c102.xc
             format_type: Yarhl.IO.BinaryFormat
             stream_offset: 169597728
             stream_length: 314324
+            tags:
             check_children: true
             children:
           - name: c103.xc
             format_type: Yarhl.IO.BinaryFormat
             stream_offset: 169912064
             stream_length: 350356
+            tags:
             check_children: true
             children:
       - name: fnt
         format_type: Yarhl.FileSystem.NodeContainerFormat
+        tags:
         check_children: false
         children:
       - name: menu
         format_type: Yarhl.FileSystem.NodeContainerFormat
+        tags:
         check_children: false
         children:
       - name: mov
         format_type: Yarhl.FileSystem.NodeContainerFormat
+        tags:
         check_children: false
         children:
       - name: seq
         format_type: Yarhl.FileSystem.NodeContainerFormat
+        tags:
         check_children: false
         children:
       - name: sky
         format_type: Yarhl.FileSystem.NodeContainerFormat
+        tags:
         check_children: false
         children:
       - name: snd
         format_type: Yarhl.FileSystem.NodeContainerFormat
+        tags:
         check_children: false
         children:
