--- a/test_resources/containers/aofm_cia.yml
+++ b/test_resources/containers/aofm_cia.yml
@@ -30,12 +30,25 @@ children:
     children:
 
   - name: content
-    format_type: Yarhl.IO.BinaryFormat
-    stream_offset: 0x3940
-    stream_length: 0x0B1E1000
+    format_type: Yarhl.FileSystem.NodeContainerFormat
     tags:
     check_children: true
     children:
+      - name: program
+        format_type: Yarhl.IO.BinaryFormat
+        stream_offset: 0x3940
+        stream_length: 0x0B17D000
+        tags:
+        check_children: true
+        children:
+
+      - name: manual
+        format_type: Yarhl.IO.BinaryFormat
+        stream_offset: 0x0B180940
+        stream_length: 0x064000
+        tags:
+        check_children: true
+        children:
 
   - name: metadata
     format_type: Yarhl.IO.BinaryFormat
