--- a/src/Lemon.IntegrationTests/Lemon.IntegrationTests.csproj
+++ b/src/Lemon.IntegrationTests/Lemon.IntegrationTests.csproj
@@ -3,35 +3,21 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>Lemon.IntegrationTests</AssemblyName>
-    <Product>SceneGate</Product>
-    <Version>0.1.0</Version>
+    <AssemblyName>SceneGate.Lemon.IntegrationTests</AssemblyName>
+    <RootNamespace>SceneGate.Lemon.IntegrationTests</RootNamespace>
     <Description>Integration tests for Lemon.</Description>
-
-    <Company>SceneGate</Company>
-    <Copyright>Copyright (c) 2019 SceneGate</Copyright>
-    <RepositoryUrl>https://github.com/SceneGate/Lemon/</RepositoryUrl>
-    <License>MIT</License>
-    <IsPackable>false</IsPackable>
-
+    <TargetFrameworks>net5.0</TargetFrameworks>
     <LangVersion>8.0</LangVersion>
-    <TargetFrameworks>netcoreapp3.1;net48</TargetFrameworks>
-    <RootNamespace>Lemon.IntegrationTests</RootNamespace>
-    <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="YamlDotNet" Version="8.1.2" />
-    <PackageReference Include="nunit" Version="3.12.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <ProjectReference Include="..\Lemon\Lemon.csproj" />
+
+    <PackageReference Include="YamlDotNet" />
+    <PackageReference Include="nunit" />
+    <PackageReference Include="NUnit3TestAdapter" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" />
+    <PackageReference Include="coverlet.collector" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Lemon\Lemon.csproj" />
-  </ItemGroup>
 </Project>
