--- a/src/Lemon/Lemon.csproj
+++ b/src/Lemon/Lemon.csproj
@@ -3,45 +3,17 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <AssemblyName>Lemon</AssemblyName>
-    <Product>SceneGate</Product>
-    <Version>0.1.0</Version>
+    <AssemblyName>SceneGate.Lemon</AssemblyName>
+    <RootNamespace>SceneGate.Lemon</RootNamespace>
     <Description>Library for Nintendo 3DS file formats.</Description>
-
-    <Authors>pleonex</Authors>
-    <Company>SceneGate</Company>
-    <Copyright>Copyright (c) 2019 SceneGate</Copyright>
-    <RepositoryUrl>https://github.com/SceneGate/Lemon/</RepositoryUrl>
-    <License>MIT</License>
-    <PackageProjectUrl>https://github.com/SceneGate/Lemon/</PackageProjectUrl>
-    <PackageTags>romhacking;n3ds;scenegate</PackageTags>
-
+    <TargetFramework>net5.0</TargetFramework>
     <LangVersion>8.0</LangVersion>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Lemon</RootNamespace>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <CodeAnalysisRuleSet>..\StyleCop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="YamlDotNet" Version="8.1.2" />
-    <PackageReference Include="LibLog" Version="5.0.8">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="3.0.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="SonarAnalyzer.CSharp" Version="8.9.0.19135">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
-    <PackageReference Include="Yarhl" Version="3.0.0-alpha11" />
+    <PackageReference Include="YamlDotNet" />
+    <PackageReference Include="LibLog" PrivateAssets="all" />
+    <PackageReference Include="Yarhl" />
   </ItemGroup>
 
 </Project>
