--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -25,6 +25,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # We need full history for version number
+          lfs: true
 
       - name: "Setup .NET SDK"
         uses: actions/setup-dotnet@v1
@@ -74,6 +75,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0 # We need full history for version number
+          lfs: true
 
       - name: "Setup .NET SDK"
         uses: actions/setup-dotnet@v1
