:spark: Small infrastructure improvements

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,9 @@
             "name": ".NET Attach",
             "type": "coreclr",
             "request": "attach",
-            "processId": "${command:pickProcess}"
+            "processId": "${command:pickProcess}",
+            "justMyCode": false,
+            "enableStepFiltering": false
         }
     ]
 }
