:sparkles: Update to .NET 6 and dependencies

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -5,6 +5,7 @@
         <Copyright>Copyright (C) 2019 SceneGate</Copyright>
 
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+        <NoWarn>NETSDK1179</NoWarn>
     </PropertyGroup>
 
     <PropertyGroup>
@@ -13,6 +14,7 @@
         <RepositoryUrl>https://github.com/SceneGate/Lemon</RepositoryUrl>
         <!-- <PackageIcon>icon.png</PackageIcon> -->
         <PackageTags>romhacking;n3ds;scenegate</PackageTags>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <!-- Deterministic and source link -->
