--- a/src/Lemon/Lemon.csproj
+++ b/src/Lemon/Lemon.csproj
@@ -6,8 +6,12 @@
     <AssemblyName>SceneGate.Lemon</AssemblyName>
     <RootNamespace>SceneGate.Lemon</RootNamespace>
     <Description>Library for Nintendo 3DS file formats.</Description>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Include="../../README.md" Pack="true" PackagePath="$(PackageReadmeFile)" Visible="false" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="YamlDotNet" />
