--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,11 @@
 {
-    "name": "Dev (Ubuntu - .NET 5, 3.1 and Mono)",
+    "name": "Dev (.NET 6 and Mono)",
     "build": {
         "dockerfile": "Dockerfile",
     },
 
-    "settings": {
-        "terminal.integrated.shell.linux": "/bin/bash"
-    },
-
     "extensions": [
         "ms-dotnettools.csharp",
-        "k--kato.docomment",
         "shardulm94.trailing-spaces",
         "cake-build.cake-vscode",
         "streetsidesoftware.code-spell-checker",
@@ -18,13 +13,12 @@
         "esbenp.prettier-vscode",
         "yzhang.markdown-all-in-one",
         "davidanson.vscode-markdownlint",
-        "eamodio.gitlens",
-        "ms-vscode.hexeditor"
+        "eamodio.gitlens"
     ],
 
     "remoteUser": "vscode",
 
-    // Required for Podman (Docker alternative)
+    // PODMAN ONLY. You may need to remove this line for Docker.
     // SELinux issues: https://github.com/containers/podman/issues/3683
     "runArgs": [ "--security-opt", "label=disable", "--userns=keep-id" ],
 
