:umbrella: Improve CIA and TMD tests

--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -5,6 +5,7 @@
         <PackageVersion Include="LibLog" Version="5.0.8" />
         <PackageVersion Include="YamlDotNet" Version="11.2.1" />
 
+        <PackageVersion Include="FluentAssertions" Version="6.3.0" />
         <PackageVersion Include="nunit" Version="3.13.2" />
         <PackageVersion Include="NUnit3TestAdapter" Version="4.2.0" />
         <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.0.0"/>
