--- a/src/Lemon.IntegrationTests/Resources/containers/tloz_oot3d.yml
+++ b/src/Lemon.IntegrationTests/Resources/containers/tloz_oot3d.yml
@@ -1,8 +1,8 @@
 signature_length: 256
-size: 536870912
-media_id: 1125899907790336
+size: 0x20000000 # 512 MB
+media_id: 0x0004000000033600
 firmwares_type: ["None", "None", "None", "None", "None", "None", "None", "None"]
 crypt_type: [0, 0, 0, 0, 0, 0, 0, 0]
-partitions_offset: [16384, 186126336]
-partitions_size: [186109952, 393216]
+partitions_offset: [0x4000, 0x1CC0B800]
+partitions_size: [0x1CC07800, 0x138000]
 available_partitions: ["program", "manual"]
