--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,7 +1,7 @@
 <Project>
     <!-- Centralize dependency management -->
     <ItemGroup>
-        <PackageVersion Include="Yarhl" Version="3.1.1-preview.55" />
+        <PackageVersion Include="Yarhl" Version="4.0.0-PullRequest0191.191" />
         <PackageVersion Include="LibLog" Version="5.0.8" />
         <PackageVersion Include="YamlDotNet" Version="11.2.1" />
 
