--- a/src/Lemon.IntegrationTests/Lemon.IntegrationTests.csproj
+++ b/src/Lemon.IntegrationTests/Lemon.IntegrationTests.csproj
@@ -1,12 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <AssemblyName>SceneGate.Lemon.IntegrationTests</AssemblyName>
-    <RootNamespace>SceneGate.Lemon.IntegrationTests</RootNamespace>
     <Description>Integration tests for Lemon.</Description>
+
     <TargetFrameworks>net6.0</TargetFrameworks>
+
+    <RootNamespace>SceneGate.Lemon.IntegrationTests</RootNamespace>
+    <GenerateDocumentationFile>false</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
