--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,12 @@
-# Output
-bin/
+# Build outputs
 obj/
-artifacts/
-*.bak
+bin/
+build/artifacts/
+build/temp/
+/CHANGELOG.md
+/CHANGELOG.NEXT.md
 
-# IDE
-*.userprefs
-*.user
-*.vs
-
-# Dependencies
-packages/
-
-# Linters and Tests
-TestResult.xml
-StyleCopViolations.xml
-StyleCop.Cache
-coverage_unit.xml
-coverage_integration.xml
-coverage_report/
-
-# Cake
-tools/*
-!tools/packages.config
-
-# Docs
-docs/_site/
-docs/api/
-doc-branch/
+# IDEs
+.vs/
+*.csproj.user
+*.DotSettings.user
