--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,46 +2,54 @@
     <PropertyGroup>
         <Product>SceneGate</Product>
         <Authors>scenegate</Authors>
+        <Company>None</Company>
         <Copyright>Copyright (C) 2019 SceneGate</Copyright>
 
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-        <NoWarn>NETSDK1179</NoWarn>
+
+        <!-- By default no project generates libs (pack nuget). Enable it per project.
+             This allow to pack at the solution level so the platform info is kept. -->
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <PropertyGroup>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <PackageProjectUrl>https://github.com/SceneGate/Lemon</PackageProjectUrl>
+        <PackageProjectUrl>https://scenegate.github.io/Lemon/</PackageProjectUrl>
         <RepositoryUrl>https://github.com/SceneGate/Lemon</RepositoryUrl>
-        <!-- <PackageIcon>icon.png</PackageIcon> -->
-        <PackageTags>romhacking;n3ds;scenegate</PackageTags>
+        <PackageIcon>icon.png</PackageIcon>
+        <PackageTags>romhacking;3ds;scenegate</PackageTags>
         <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <!-- Deterministic and source link -->
     <PropertyGroup Condition="'$(GITHUB_ACTIONS)' == 'true'">
-        <!-- Deterministic and source link -->
+        <!-- Publish the repository URL in the nuget metadata for SourceLink -->
         <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-        <EmbedUntrackedSources>true</EmbedUntrackedSources>
-        <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
 
+        <!-- Embed auto-generated code for SourceLink -->
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+
+        <!-- For SourceLink and debugging support we don't publish a symbol NuGet
+            as some NuGet feeds like Azure DevOps does not provide a symbol server.
+            Instead we embed the metadata (PDB) inside the DLLs and EXEs.
+            We use this approach instead of providing the .pdb inside the NuGet
+            as the latter has known issues with Visual Studio:
+            https://github.com/dotnet/sourcelink/issues/628 -->
+        <DebugType>embedded</DebugType>
+
+        <!-- Enable deterministic builds -->
         <Deterministic>true</Deterministic>
         <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
     </PropertyGroup>
-    <ItemGroup>
-        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
-    </ItemGroup>
 
     <!-- Code analyzers -->
     <PropertyGroup>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <EnableNETAnalyzers>true</EnableNETAnalyzers>
+        <AnalysisLevel>latest</AnalysisLevel>
         <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="StyleCop.Analyzers" PrivateAssets="All"/>
         <PackageReference Include="SonarAnalyzer.CSharp" PrivateAssets="All"/>
-        <PackageReference Include="Roslynator.Analyzers" PrivateAssets="All"/>
     </ItemGroup>
 </Project>
