--- a/src/Lemon/Lemon.csproj
+++ b/src/Lemon/Lemon.csproj
@@ -1,16 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <OutputType>Library</OutputType>
     <AssemblyName>SceneGate.Lemon</AssemblyName>
-    <RootNamespace>SceneGate.Lemon</RootNamespace>
     <Description>Library for Nintendo 3DS file formats.</Description>
+    <IsPackable>true</IsPackable>
+
     <TargetFramework>net6.0</TargetFramework>
+
+    <RootNamespace>SceneGate.Lemon</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="../../README.md" Pack="true" PackagePath="$(PackageReadmeFile)" Visible="false" />
+    <None Include="../../docs/images/logo-128.png" Pack="true" PackagePath="$(PackageIcon)" Visible="false" />
+    <None Include="../../docs/index.md" Pack="true" PackagePath="$(PackageReadmeFile)" Visible="False" />
   </ItemGroup>
 
   <ItemGroup>
