--- a/.editorconfig
+++ b/.editorconfig
@@ -53,8 +53,8 @@ dotnet_style_predefined_type_for_locals_parameters_members = true:warning
 dotnet_style_predefined_type_for_member_access = true:warning
 
 ### Modifier preferences
-dotnet_style_require_accessibility_modifiers = for_non_interface_members:warning
-dotnet_diagnostic.SA1400.severity = warning # it doesn't follow the above value
+dotnet_style_require_accessibility_modifiers = for_non_interface_members:suggestion
+dotnet_diagnostic.SA1400.severity = suggestion # it doesn't follow the above value
 dotnet_style_readonly_field = true:warning
 
 ### Parentheses preferences
@@ -129,8 +129,8 @@ csharp_style_throw_expression = true:warning
 csharp_style_conditional_delegate_call = true:warning
 
 ### Code-block preferences
-csharp_prefer_braces = true:warning
-dotnet_diagnostic.SA1503.severity = warning # Doesn't follow above value
+csharp_prefer_braces = when_multiline:warning
+dotnet_diagnostic.SA1503.severity = suggestion # Braces can be omitted (guards can)
 csharp_prefer_simple_using_statement = true:suggestion
 csharp_style_prefer_tuple_swap = true:suggestion
 
@@ -251,10 +251,12 @@ dotnet_diagnostic.SA1633.severity = none # No XML-format header in source files
 ### SonarAnalyzer
 dotnet_diagnostic.S1133.severity = suggestion # Remove deprecated code -.-' I know, some day
 dotnet_diagnostic.S1135.severity = suggestion # It's almost inevitable to have TODO but add bug ID
+dotnet_diagnostic.S1133.severity = suggestion # Remove obsoletes
 
 # Special rules for test projects
 [src/*Tests/**]
 dotnet_diagnostic.CS1591.severity = none # Disable documentation
+dotnet_diagnostic.CS0618.severity = suggestion # Obsolete methods
 dotnet_diagnostic.CA1001.severity = none # No need to implement IDisposable in test classes with cleanup.
 dotnet_diagnostic.CA1034.severity = none # Public types in test classes for testing implementations
 dotnet_diagnostic.CA1040.severity = none # Empty interfaces for testing
@@ -262,7 +264,9 @@ dotnet_diagnostic.CA1062.severity = none # No need to validate args in test meth
 dotnet_diagnostic.CA1305.severity = none # No culture method for quick test code
 dotnet_diagnostic.CA1307.severity = none # No culture method for quick test code
 dotnet_diagnostic.SA0001.severity = none # Disable documentation
+dotnet_diagnostic.SA1402.severity = none # Multiple types in the same file
 dotnet_diagnostic.SA1600.severity = none # Disable documentation
+dotnet_diagnostic.SA1601.severity = none # Disable documentation
 dotnet_diagnostic.SA1201.severity = none # Allow enums inside classes
 dotnet_diagnostic.S1144.severity = none # Remove unused setter
 dotnet_diagnostic.S2094.severity = none # Remove empty class
