--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # We need full history for version number
+          lfs: true
 
       - name: "Setup .NET SDK"
         uses: actions/setup-dotnet@v3
