--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -1,18 +1,14 @@
 <Project>
-    <!-- Centralize dependency management -->
-    <ItemGroup>
-        <PackageVersion Include="Yarhl" Version="4.0.0-preview.283" />
-        <PackageVersion Include="LibLog" Version="5.0.8" />
-        <PackageVersion Include="YamlDotNet" Version="11.2.1" />
-
-        <PackageVersion Include="FluentAssertions" Version="6.3.0" />
-        <PackageVersion Include="nunit" Version="3.13.2" />
-        <PackageVersion Include="NUnit3TestAdapter" Version="4.2.0" />
-        <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.0.0"/>
-        <PackageVersion Include="coverlet.collector" Version="3.1.0" />
-
-        <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" />
-
-        <PackageVersion Include="SonarAnalyzer.CSharp" Version="8.33.0.40503" />
-    </ItemGroup>
+  <!-- Centralize dependency management -->
+  <ItemGroup>
+    <PackageVersion Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <PackageVersion Include="Yarhl" Version="4.0.0-preview.283" />
+    <PackageVersion Include="YamlDotNet" Version="13.7.1" />
+    <PackageVersion Include="FluentAssertions" Version="6.12.0" />
+    <PackageVersion Include="nunit" Version="4.0.1" />
+    <PackageVersion Include="NUnit3TestAdapter" Version="4.5.0" />
+    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageVersion Include="coverlet.collector" Version="6.0.0" />
+    <PackageVersion Include="SonarAnalyzer.CSharp" Version="9.15.0.81779" />
+  </ItemGroup>
 </Project>
