--- a/src/Lemon/Lemon.csproj
+++ b/src/Lemon/Lemon.csproj
@@ -5,7 +5,7 @@
     <Description>Library for Nintendo 3DS file formats.</Description>
     <IsPackable>true</IsPackable>
 
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 
     <RootNamespace>SceneGate.Lemon</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -18,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" />
     <PackageReference Include="YamlDotNet" />
-    <PackageReference Include="LibLog" PrivateAssets="all" />
     <PackageReference Include="Yarhl" />
   </ItemGroup>
 
